<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">


    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/oval"
        android:drawableTop="@android:drawable/ic_menu_camera"
        />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:hint="@string/email"
         />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:hint="@string/phone"
         />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/buttonView"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:height="50dp"
        android:background="#03A9F4"
        android:text="@string/view"
         />

</LinearLayout>
